--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
     <link href="style.css" type="text/css" rel="stylesheet">
-    <link rel="icon" href="assets/img/bb_icon.png">
+    <link rel="icon" href="assets/img/bb_icon.png" type="image/x-icon">
     <title>Ben Borovinsky</title>
 </head>
 
@@ -355,7 +355,8 @@
     <div class="footer">
         <div class="container">
             <div class="text">
-                <p><img src="assets/svg/portrait_faceless.svg" />&copy; Ben Borovinsky | Fight On</p>
+                <p id="copyright"><img src="assets/svg/portrait_faceless.svg" />&copy; Ben Borovinsky | Fight On</p>
+                <p id="willie">Thanks to <a href="http://wilhelmwillie.com/" target="_blank">Willie</a> for website help!</p>
             </div>
         </div>
     </div>
