--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
     <link href="style.css" type="text/css" rel="stylesheet">
-    <link rel="icon" href="assets/img/bb_icon.png" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/img/bb_icon.ico" type="image/x-icon">
     <title>Ben Borovinsky</title>
+    <meta name="description" content="A website about an engineer who loves numbers, analytics and sports.">
+    <meta name="keywords" content="Ben, Borovinsky">
 </head>
 
 <body>
