--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <p>USC, BS '19</p>
                         <div class="pers-container">
                             <a class="pers-btn" href="assets/pdf/Resume.pdf" target="_blank" title="Resume"><img src="assets/svg/glyphs/pdf_glyph.svg"></a>
-                            <a class="pers-btn" href="" target="_blank" title="Website"><img src="assets/svg/glyphs/globe_glyph.svg"></a>
+                            <a class="pers-btn" href="https://borovinsky.com" target="_blank" title="Website"><img src="assets/svg/glyphs/globe_glyph.svg"></a>
                             <a class="pers-btn" href="https://hackertyper.net/" target="_blank" title="Fun Link"><img src="assets/svg/glyphs/code_glyph.svg"></a>
                         </div>
                         <div class="passion">
@@ -316,6 +316,12 @@
                     </a>
                     <a class="grid-box" id="blog" href="https://link.medium.com/4dON9uztSW" target="_blank">
                         <div class="grid-box-blog">Week 2</div>
+                    </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/KGoMvsH13W" target="_blank">
+                        <div class="grid-box-blog">Week 3</div>
+                    </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/YuM30h17fX" target="_blank">
+                        <div class="grid-box-blog">Week 4</div>
                     </a>
                 </div>
             </div>
