--- a/index.html
+++ b/index.html
@@ -323,6 +323,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/YuM30h17fX" target="_blank">
                         <div class="grid-box-blog">Week 4</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/S9nRGI5mtX" target="_blank">
+                        <div class="grid-box-blog">Week 5</div>
+                    </a>
                 </div>
             </div>
         </div>
