--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
             </div>
 
-            <div class="work-experience section">
+            <div class="work-experience section" id="PageRefresh">
                 <div class="text">
                     <div class="sec">
                         <div class="lines l"></div>
@@ -184,7 +184,7 @@
                     <div class="grid-box">
                         <div class="grid-box-full">
                             <div class="grid-box-top">
-                                <img id="landscape" src="assets/img/companies/usc_football.png">
+                                <img src="assets/img/companies/usc_football.png">
                             </div>
                             <div class="grid-box-bottom">
                                 <p>Football Recruiting Office</p>
@@ -194,7 +194,7 @@
                     <div class="grid-box">
                         <div class="grid-box-full">
                             <div class="grid-box-top">
-                                <img id="landscape" src="assets/img/companies/usc_athletics.png">
+                                <img src="assets/img/companies/usc_athletics.png">
                             </div>
                             <div class="grid-box-bottom">
                                 <p>Sports Information Office</p>
@@ -204,7 +204,7 @@
                     <div class="grid-box">
                         <div class="grid-box-full">
                             <div class="grid-box-top">
-                                <img id="portrait" src="assets/img/companies/ss_logo.jpg">
+                                <img src="assets/img/companies/ss_logo.jpg">
                             </div>
                             <div class="grid-box-bottom">
                                 <p>Second Spectrum</p>
@@ -213,7 +213,9 @@
                     </div>
                     <div class="grid-box">
                         <div class="grid-box-full">
-                            <img class="grid-box-top" src="assets/img/companies/LenderLive.jpg">
+                            <div class="grid-box-top"> 
+                                <img src="assets/img/companies/LenderLive.jpg">
+                            </div>
                             <div class="grid-box-bottom">
                                 <p>LenderLive</p>
                             </div>
@@ -221,7 +223,9 @@
                     </div>
                     <div class="grid-box">
                         <div class="grid-box-full">
-                            <img class="grid-box-top" src="assets/img/companies/OliverWyman.jpg">
+                            <div class="grid-box-top">
+                                <img src="assets/img/companies/OliverWyman.jpg">
+                            </div>
                             <div class="grid-box-bottom">
                                 <p>Oliver Wyman</p>
                             </div>
@@ -230,7 +234,7 @@
                     <div class="grid-box">
                         <div class="grid-box-full">
                             <div class="grid-box-top">
-                                <img id="portrait" src="assets/img/companies/dt_logo.png">
+                                <img src="assets/img/companies/dt_logo.png">
                             </div>
                             <div class="grid-box-bottom">
                                 <p>Daily Trojan</p>
@@ -239,7 +243,9 @@
                     </div>
                     <div class="grid-box">
                         <div class="grid-box-full">
-                            <img class="grid-box-top" src="assets/img/companies/monster_energy.png">
+                            <div class="grid-box-top">
+                                <img src="assets/img/companies/monster_energy.png">
+                            </div>
                             <div class="grid-box-bottom">
                                 <p>Monster Energy Company</p>
                             </div>
