--- a/index.html
+++ b/index.html
@@ -335,6 +335,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/2dZTHcmZCX" target="_blank">
                         <div class="grid-box-blog">Week 6</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/9RGK96sFOX" target="_blank">
+                        <div class="grid-box-blog">Week 7</div>
+                    </a>
                 </div>
             </div>
         </div>
