--- a/index.html
+++ b/index.html
@@ -341,6 +341,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/WrfEOTQs0X" target="_blank">
                         <div class="grid-box-blog">Week 8</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/93tozxfIbY" target="_blank">
+                        <div class="grid-box-blog">Week 9</div>
+                    </a>
                 </div>
             </div>
         </div>
