--- a/index.html
+++ b/index.html
@@ -344,6 +344,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/93tozxfIbY" target="_blank">
                         <div class="grid-box-blog">Week 9</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/cEhNNlRHnY" target="_blank">
+                        <div class="grid-box-blog">Week 10</div>
+                    </a>
                 </div>
             </div>
         </div>
