--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/cEhNNlRHnY" target="_blank">
                         <div class="grid-box-blog">Week 10</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/Qc8RzhcKJY" target="_blank">
+                        <div class="grid-box-blog">Finale: Part 1</div>
+                    </a>
                 </div>
             </div>
         </div>
