--- a/index.html
+++ b/index.html
@@ -350,6 +350,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/Qc8RzhcKJY" target="_blank">
                         <div class="grid-box-blog">Finale: Part 1</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/eZSjOnEnMY" target="_blank">
+                        <div class="grid-box-blog">Finale: Part 2</div>
+                    </a>
                 </div>
             </div>
         </div>
