--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <h4>BEN BOROVINSKY</h4>
                         <p>USC, BS '19</p>
                         <div class="pers-container">
-                            <a class="pers-btn" href="assets/pdf/Resume.pdf" target="_blank" title="Resume"><img src="assets/svg/glyphs/pdf_glyph.svg"></a>
+                            <a class="pers-btn" href="assets/pdf/Resume - Ben Borovinsky.pdf" target="_blank" title="Resume"><img src="assets/svg/glyphs/pdf_glyph.svg"></a>
                             <a class="pers-btn" href="http://borovinsky.com" target="_self" title="Website"><img src="assets/svg/glyphs/globe_glyph.svg"></a>
                             <a class="pers-btn" href="https://hackertyper.net/" target="_blank" title="Fun Link"><img src="assets/svg/glyphs/code_glyph.svg"></a>
                         </div>
