--- a/index.html
+++ b/index.html
@@ -312,7 +312,19 @@
                 <div class="text">
                     <div class="sec">
                         <div class="lines l"></div>
-                        <h2>Bachelorette</h2>
+                        <h2>Bachelor for Nerds (2020)</h2>
+                        <div class="lines r"></div>
+                    </div>
+                </div>
+                <div class="grid">
+                    <a class="grid-box" id="blog" href="https://link.medium.com/p10NBLJU82" target="_blank">
+                        <div class="grid-box-blog">Week 1</div>
+                    </a>
+                </div>
+                <div class="text">
+                    <div class="sec">
+                        <div class="lines l"></div>
+                        <h2>Bachelorette for Nerds (2019)</h2>
                         <div class="lines r"></div>
                     </div>
                 </div>
