--- a/index.html
+++ b/index.html
@@ -320,6 +320,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/p10NBLJU82" target="_blank">
                         <div class="grid-box-blog">Week 1</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/VRcv2Gsyh3" target="_blank">
+                        <div class="grid-box-blog">Week 2</div>
+                    </a>
                 </div>
                 <div class="text">
                     <div class="sec">
