--- a/index.html
+++ b/index.html
@@ -326,6 +326,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/y8V5x3VQr3" target="_blank">
                         <div class="grid-box-blog">Week 3</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/RA18E39DE3" target="_blank">
+                        <div class="grid-box-blog">Week 4</div>
+                    </a>
                 </div>
                 <div class="text">
                     <div class="sec">
