--- a/index.html
+++ b/index.html
@@ -329,6 +329,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/RA18E39DE3" target="_blank">
                         <div class="grid-box-blog">Week 4</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/WOl4TI1oO3" target="_blank">
+                        <div class="grid-box-blog">Week 5: Part 1</div>
+                    </a>
                 </div>
                 <div class="text">
                     <div class="sec">
