--- a/index.html
+++ b/index.html
@@ -332,6 +332,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/WOl4TI1oO3" target="_blank">
                         <div class="grid-box-blog">Week 5: Part 1</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/o8YUrhNTR3" target="_blank">
+                        <div class="grid-box-blog">Week 5: Part 2</div>
+                    </a>
                 </div>
                 <div class="text">
                     <div class="sec">
