--- a/index.html
+++ b/index.html
@@ -335,6 +335,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/o8YUrhNTR3" target="_blank">
                         <div class="grid-box-blog">Week 5: Part 2</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/c42tGWdYZ3" target="_blank">
+                        <div class="grid-box-blog">Week 6</div>
+                    </a>
                 </div>
                 <div class="text">
                     <div class="sec">
