--- a/index.html
+++ b/index.html
@@ -338,6 +338,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/c42tGWdYZ3" target="_blank">
                         <div class="grid-box-blog">Week 6</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/6ItNW3cBb4" target="_blank">
+                        <div class="grid-box-blog">Week 7</div>
+                    </a>
                 </div>
                 <div class="text">
                     <div class="sec">
