--- a/index.html
+++ b/index.html
@@ -341,6 +341,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/6ItNW3cBb4" target="_blank">
                         <div class="grid-box-blog">Week 7</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/RsopoAwbn4" target="_blank">
+                        <div class="grid-box-blog">Week 8</div>
+                    </a>
                 </div>
                 <div class="text">
                     <div class="sec">
