--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
                     <a class="grid-box" id="blog" href="https://link.medium.com/MmeDVm9hz4" target="_blank">
                         <div class="grid-box-blog">Week 9</div>
                     </a>
+                    <a class="grid-box" id="blog" href="https://link.medium.com/fTo3VH2xM4" target="_blank">
+                        <div class="grid-box-blog">Finale</div>
+                    </a>
                 </div>
                 <div class="text">
                     <div class="sec">
