--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <div class="main">
         <div class="container">
             <div class="personal section section-active">
-                <div class="text">
-                    <h2><span class="rotate">An engineer with a passion for sports.</span><!-- <hr> --></h2>
-                </div>
+<!--                 <div class="text">
+                    <h2><span class="rotate">An engineer with a passion for sports.</span><hr></h2>
+                </div> -->
                 <div class="content">
                     <div class="side">
                         <img src="assets/img/bean/bean_ams.JPG" class="bean">
