--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
             </div>
 
-            <div class="work-experience section" id="PageRefresh">
+            <div class="work-experience section">
                 <div class="text">
                     <div class="sec">
                         <div class="lines l"></div>
@@ -256,7 +256,7 @@
                 </div>
             </div>
 
-            <div class="projects section" id="PageRefresh">
+            <div class="projects section">
                 <div class="text">
                     <div class="projects-list">
                         <a class="projects-item" href="assets/pdf/MLB_Player_Value.pdf" target="_blank" id="last">
