--- a/index.html
+++ b/index.html
@@ -183,6 +183,16 @@
                     </div>
                 </div>
                 <div class="grid">
+                    <div class="grid-box" data-modal-target="#modal-impac">
+                        <div class="grid-box-full">
+                            <div class="grid-box-top">
+                                <img src="assets/img/companies/impac.png">
+                            </div>
+                            <div class="grid-box-bottom">
+                                <p>Impac Mortgage Corp.</p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="grid-box" data-modal-target="#modal-football">
                         <div class="grid-box-full">
                             <div class="grid-box-top">
@@ -269,6 +279,19 @@
                                 </div>
                                 <div class="date">
                                     May 1, 2020
+                                </div>
+                            </div>
+                        </a>
+                        <a class="projects-item" href="https://borovinsky.shinyapps.io/sw_music_spotify/" target="_blank">
+                            <div class="thumbnail">
+                                <img src="assets/img/projects/sw_spotify.JPG" id="cover">
+                            </div>
+                            <div class="description">
+                                <div class="title">
+                                    Star Wars Music Analysis Using Spotify API
+                                </div>
+                                <div class="date">
+                                    November 22, 2020
                                 </div>
                             </div>
                         </a>
@@ -462,18 +485,37 @@
     <!--Modals-->
     <div id="overlay"></div>
 
+    <div class="modal" id="modal-impac">
+        <div class="modal-header">
+            <div class="title">Impac Mortgage Corp.</div>
+            <button data-close-target class="close-button">&times;</button>
+        </div>
+        <div class="modal-body">
+            <div class="date">September 2020 &mdash; present</div>
+            <div class="position">Capital Markets Analyst</div>
+            <ul class="details">
+                <li>Optimize data acquisition for internal reporting using SQL</li>
+                <li>Explore trends in mortgage market with multi-billion records of GSE data</li>
+            </ul>
+        </div>
+        <div class="modal-image">
+            <img src="assets/img/companies/impac.png">
+        </div>
+    </div>
+
     <div class="modal" id="modal-football">
         <div class="modal-header">
             <div class="title">USC Football Recruiting Office</div>
             <button data-close-target class="close-button">&times;</button>
         </div>
         <div class="modal-body">
-            <div class="date">May 2019 &mdash; present</div>
+            <div class="date">May 2019 &mdash; July 2020</div>
             <div class="position">Player Personnel Intern and Analytics Specialist</div>
             <ul class="details">
-                <li>Perform data analytics on players and prospects via football database management</li>
-                <li>Cooperate with official and unofficial visits from top-tier recruits</li>
-                <li>Assist with USC football camps and clinics for future athletes</li>
+                <li>Performed data collection and normalization with information from official sources on football recruits</li>
+                <li>Analyzed resulting recruit data and build reports for coaches with recruiting operations</li>
+                <li>Cooperated with official and unofficial visits from top-tier recruits</li>
+                <li>Assisted with USC football camps and clinics for future athletes</li>
             </ul>
         </div>
         <div class="modal-image">
@@ -487,12 +529,12 @@
             <button data-close-target class="close-button">&times;</button>
         </div>
         <div class="modal-body">
-            <div class="date">August 2016 &mdash; present</div>
+            <div class="date">August 2016 &mdash; May 2020</div>
             <div class="position">Student Intern</div>
             <ul class="details">
-                <li>Complete statistics at Men’s Basketball games and Women’s Beach Volleyball matches</li>
-                <li>Provide data assistance for all other USC sports</li>
-                <li>Write athlete features and biographies for programs and website</li>
+                <li>Completed statistics at Men’s Basketball games and Women’s Beach Volleyball matches</li>
+                <li>Provided data assistance for all other USC sports, such as Football, Women's Soccer, and Baseball</li>
+                <li>Wrote athlete features and biographies for game programs and website</li>
             </ul>
         </div>
         <div class="modal-image">
