--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             seventh and thirteenth in the lineup, I began collecting baseball cards. Over the years, I had accrued more than two
                             full binders of cards separated by league and organized by team and last name. This library of past and present
                             baseball sparked my obsession with the sport. Throughout middle school, I would watch MLB Network’s recap show
-                            <em>Hot Stove</em> every morning and all-time ranking show <em>Prime 9</em> in the afternoon. My baseball trivia
+                            <em>Quick Pitch</em> every morning and all-time ranking show <em>Prime 9</em> in the afternoon. My baseball trivia
                             knowledge was growing, for I was addicted to the sport.
                         </p>
                         <p>In 2008, I embarked on a journey that challenged me both mentally and physically: running the Los Angeles Marathon.
