--- a/index.html
+++ b/index.html
@@ -312,6 +312,20 @@
                 <div class="text">
                     <div class="sec">
                         <div class="lines l"></div>
+                        <h2>Bachelor for Nerds (2021)</h2>
+                        <div class="lines r"></div>
+                    </div>
+
+                    <div class="blog-list">
+                        <a class="blog-item" href="https://link.medium.com/SLiixp4lWcb" target="_blank" id="last">
+                            <div class="title">Bachelor for Nerds</div>
+                            <div class="info">Week 1</div>
+                            <div class="date">January 10, 2021</div>
+                        </a>
+                    </div>
+
+                    <div class="sec">
+                        <div class="lines l"></div>
                         <h2>Bachelor for Nerds (2020)</h2>
                         <div class="lines r"></div>
                     </div>
