--- a/index.html
+++ b/index.html
@@ -322,6 +322,16 @@
                             <div class="info">Week 1</div>
                             <div class="date">January 10, 2021</div>
                         </a>
+                        <a class="blog-item" href="https://link.medium.com/164372NC4cb" target="_blank">
+                            <div class="title">Bachelor for Nerds</div>
+                            <div class="info">Week 2</div>
+                            <div class="date">January 15, 2021</div>
+                        </a>
+                        <a class="blog-item" href="https://link.medium.com/72Lu39Fzedb" target="_blank">
+                            <div class="title">Bachelor for Nerds</div>
+                            <div class="info">Week 3</div>
+                            <div class="date">January 21, 2021</div>
+                        </a>
                     </div>
 
                     <div class="sec">
