--- a/index.html
+++ b/index.html
@@ -332,6 +332,11 @@
                             <div class="info">Week 3</div>
                             <div class="date">January 21, 2021</div>
                         </a>
+                        <a class="blog-item" href="https://link.medium.com/nwJPlKbpqdb" target="_blank">
+                            <div class="title">Bachelor for Nerds</div>
+                            <div class="info">Week 4</div>
+                            <div class="date">January 28, 2021</div>
+                        </a>
                     </div>
 
                     <div class="sec">
