--- a/index.html
+++ b/index.html
@@ -295,6 +295,19 @@
                                 </div>
                             </div>
                         </a>
+                        <a class="projects-item" href="assets/html/lego_demo.html" target="_blank">
+                            <div class="thumbnail">
+                                <img src="assets/img/projects/lego_r.png" id="cover">
+                            </div>
+                            <div class="description">
+                                <div class="title">
+                                    Checking LEGO Store Inventory with R
+                                </div>
+                                <div class="date">
+                                    January 31, 2021
+                                </div>
+                            </div>
+                        </a>
                         <!--<div class="projects-item">
                             ITEM 2
                         </div> -->
