--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="projects-item" href="assets/html/lego_demo.html" target="_blank">
+                        <a class="projects-item" href="lego_demo.html" target="_blank">
                             <div class="thumbnail">
                                 <img src="assets/img/projects/lego_r.png" id="cover">
                             </div>
