--- a/index.html
+++ b/index.html
@@ -350,6 +350,11 @@
                             <div class="info">Week 4</div>
                             <div class="date">January 28, 2021</div>
                         </a>
+                        <a class="blog-item" href="https://link.medium.com/vEQXbytNBdb" target="_blank">
+                            <div class="title">Bachelor for Nerds</div>
+                            <div class="info">Week 5</div>
+                            <div class="date">February 4, 2021</div>
+                        </a>
                     </div>
 
                     <div class="sec">
