--- a/index.html
+++ b/index.html
@@ -355,6 +355,11 @@
                             <div class="info">Week 5</div>
                             <div class="date">February 4, 2021</div>
                         </a>
+                        <a class="blog-item" href="https://link.medium.com/g9w6vhatNdb" target="_blank">
+                            <div class="title">Bachelor for Nerds</div>
+                            <div class="info">Week 6</div>
+                            <div class="date">February 11, 2021</div>
+                        </a>
                     </div>
 
                     <div class="sec">
