--- a/index.html
+++ b/index.html
@@ -360,6 +360,11 @@
                             <div class="info">Week 6</div>
                             <div class="date">February 11, 2021</div>
                         </a>
+                        <a class="blog-item" href="https://link.medium.com/w6Xj1PB7Ydb" target="_blank">
+                            <div class="title">Bachelor for Nerds</div>
+                            <div class="info">Week 7</div>
+                            <div class="date">February 18, 2021</div>
+                        </a>
                     </div>
 
                     <div class="sec">
