--- a/index.html
+++ b/index.html
@@ -365,6 +365,11 @@
                             <div class="info">Week 7</div>
                             <div class="date">February 18, 2021</div>
                         </a>
+                        <a class="blog-item" href="https://link.medium.com/wafOQh0naeb" target="_blank">
+                            <div class="title">Bachelor for Nerds</div>
+                            <div class="info">Week 8</div>
+                            <div class="date">February 25, 2021</div>
+                        </a>
                     </div>
 
                     <div class="sec">
