--- a/index.html
+++ b/index.html
@@ -370,6 +370,11 @@
                             <div class="info">Week 8</div>
                             <div class="date">February 25, 2021</div>
                         </a>
+                        <a class="blog-item" href="https://link.medium.com/E86UMJGBxeb" target="_blank">
+                            <div class="title">Bachelor for Nerds</div>
+                            <div class="info">Week 9</div>
+                            <div class="date">March 11, 2021</div>
+                        </a>
                     </div>
 
                     <div class="sec">
