--- a/index.html
+++ b/index.html
@@ -375,6 +375,11 @@
                             <div class="info">Week 9</div>
                             <div class="date">March 11, 2021</div>
                         </a>
+                        <a class="blog-item" href="https://link.medium.com/EVG4ndoGOeb" target="_blank">
+                            <div class="title">Bachelor for Nerds</div>
+                            <div class="info">Week 10</div>
+                            <div class="date">March 21, 2021</div>
+                        </a>
                     </div>
 
                     <div class="sec">
