--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         </a>
                         <a class="blog-item" href="https://link.medium.com/EVG4ndoGOeb" target="_blank">
                             <div class="title">Bachelor for Nerds</div>
-                            <div class="info">Week 10</div>
+                            <div class="info">Finale</div>
                             <div class="date">March 21, 2021</div>
                         </a>
                     </div>
