--- a/index.html
+++ b/index.html
@@ -566,8 +566,11 @@
             <div class="date">September 2020 &mdash; present</div>
             <div class="position">Capital Markets Analyst</div>
             <ul class="details">
+                <li>Develop competitive pricing analysis reports with Python web-scraping methods</li>
+                <li>Modernize and automate tasks by converting into scripts supported with version control</li>
+                <li>Assess pipeline health and present visualizations with Power BI</li>
                 <li>Optimize data acquisition for internal reporting using SQL</li>
-                <li>Explore trends in mortgage market with multi-billion records of GSE data</li>
+                <li>Explore trends in mortgage market with multi-billion records of GSE data</li>         
             </ul>
         </div>
         <div class="modal-image">
