--- a/index.html
+++ b/index.html
@@ -183,10 +183,20 @@
                     </div>
                 </div>
                 <div class="grid">
+                    <div class="grid-box" data-modal-target="#modal-sgcp">
+                        <div class="grid-box-full">
+                            <div class="grid-box-top">
+                                <img src="assets/img/companies/sgcp_logo.png">
+                            </div>
+                            <div class="grid-box-bottom">
+                                <p>SG Capital Partners</p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="grid-box" data-modal-target="#modal-impac">
                         <div class="grid-box-full">
                             <div class="grid-box-top">
-                                <img src="assets/img/companies/impac.png">
+                                <img src="assets/img/companies/impac_full.png">
                             </div>
                             <div class="grid-box-bottom">
                                 <p>Impac Mortgage Corp.</p>
@@ -226,7 +236,7 @@
                     <div class="grid-box" data-modal-target="#modal-lenderlive">
                         <div class="grid-box-full">
                             <div class="grid-box-top"> 
-                                <img src="assets/img/companies/LenderLive.png">
+                                <img src="assets/img/companies/lenderlive_full.png">
                             </div>
                             <div class="grid-box-bottom">
                                 <p>LenderLive</p>
@@ -236,7 +246,7 @@
                     <div class="grid-box" data-modal-target="#modal-ow">
                         <div class="grid-box-full" >
                             <div class="grid-box-top">
-                                <img src="assets/img/companies/OliverWyman.png">
+                                <img src="assets/img/companies/ow_logo.png">
                             </div>
                             <div class="grid-box-bottom">
                                 <p>Oliver Wyman</p>
@@ -256,7 +266,7 @@
                     <div class="grid-box" data-modal-target="#modal-monster">
                         <div class="grid-box-full">
                             <div class="grid-box-top">
-                                <img src="assets/img/companies/monster_energy.png">
+                                <img src="assets/img/companies/monster_logo.png">
                             </div>
                             <div class="grid-box-bottom">
                                 <p>Monster Energy Company</p>
@@ -557,24 +567,43 @@
     <!--Modals-->
     <div id="overlay"></div>
 
+    <div class="modal" id="modal-sgcp">
+        <div class="modal-header">
+            <div class="title">SG Capital Partners</div>
+            <button data-close-target class="close-button">&times;</button>
+        </div>
+        <div class="modal-body">
+            <div class="date">August 2022 &mdash; present</div>
+            <div class="position">Capital Markets Associate</div>
+            <ul class="details">
+                <li>Create rate comparisons of different scenarios from competitor ratesheet prices using Python and Excel</li>
+                <li>Work with tech team to update reports and optimize data acquisition with Python</li>
+                <li>Help make predictions on pool metrics based on internal pipeline and market trends</li>
+            </ul>
+        </div>
+        <div class="modal-image">
+            <img src="assets/img/companies/sgcp_full.png">
+        </div>
+    </div>
+
     <div class="modal" id="modal-impac">
         <div class="modal-header">
             <div class="title">Impac Mortgage Corp.</div>
             <button data-close-target class="close-button">&times;</button>
         </div>
         <div class="modal-body">
-            <div class="date">September 2020 &mdash; present</div>
+            <div class="date">September 2020 &mdash; August 2022</div>
             <div class="position">Capital Markets Analyst</div>
             <ul class="details">
-                <li>Develop competitive pricing analysis reports with Python web-scraping methods</li>
-                <li>Modernize and automate tasks by converting into scripts supported with version control</li>
-                <li>Assess pipeline health and present visualizations with Power BI</li>
-                <li>Optimize data acquisition for internal reporting using SQL</li>
-                <li>Explore trends in mortgage market with multi-billion records of GSE data</li>         
+                <li>Developed competitive pricing analysis reports with Python web-scraping methods</li>
+                <li>Modernized and automated tasks by converting into scripts supported with version control</li>
+                <li>Assessed pipeline health and present visualizations with Power BI</li>
+                <li>Optimized data acquisition for internal reporting using SQL</li>
+                <li>Explored trends in mortgage market with multi-billion records of GSE data</li>         
             </ul>
         </div>
         <div class="modal-image">
-            <img src="assets/img/companies/impac.png">
+            <img src="assets/img/companies/impac_full.png">
         </div>
     </div>
 
@@ -632,7 +661,7 @@
             </ul>
         </div>
         <div class="modal-image">
-            <img src="assets/img/companies/ss_logo.png">
+            <img src="assets/img/companies/ss_full.png">
         </div>
     </div>
 
@@ -651,7 +680,7 @@
             </ul>
         </div>
         <div class="modal-image">
-            <img src="assets/img/companies/LenderLive.png">
+            <img src="assets/img/companies/lenderlive_full.png">
         </div>
     </div>
 
@@ -670,7 +699,7 @@
             </ul>
         </div>
         <div class="modal-image">
-            <img src="assets/img/companies/OliverWyman.png">
+            <img src="assets/img/companies/ow_full.png">
         </div>
     </div>
 
@@ -687,7 +716,7 @@
             </ul>
         </div>
         <div class="modal-image">
-            <img src="assets/img/companies/dt_logo.png">
+            <img src="assets/img/companies/dt_full.png">
         </div>
     </div>
 
@@ -706,7 +735,7 @@
             </ul>
         </div>
         <div class="modal-image">
-            <img src="assets/img/companies/monster_energy.png">
+            <img src="assets/img/companies/monster_full.png">
         </div>
     </div>
     
