--- a/index.html
+++ b/index.html
@@ -576,9 +576,13 @@
             <div class="date">August 2022 &mdash; present</div>
             <div class="position">Capital Markets Associate</div>
             <ul class="details">
-                <li>Create rate comparisons of different scenarios from competitor ratesheet prices using Python and Excel</li>
-                <li>Work with tech team to update reports and optimize data acquisition with Python</li>
-                <li>Help make predictions on pool metrics based on internal pipeline and market trends</li>
+                <li>Create and maintain scripts for residential Non-QM analytics using object-oriented programming and recursion</li>
+                <li>Monitor loan trade performance using servicing remittance data, cleaned and compiled with Python</li>
+                <li>Compare pricing against competitors across multiple scenarios and generate reports using Python and Excel</li>
+                <li>Prepare monthly P&L estimates of residential trading volume</li>
+                <li>Craft adjustments and eligibility rules to match our guidelines in our seller lock portal using mathematical logic</li>
+                <li>Compose summaries of weekly research for distribution throughout the company</li>
+                <li>Work with technology team to update reports and optimize data acquisition with Python</li>
             </ul>
         </div>
         <div class="modal-image">
